# llm_course_rag

./: .gitignore  RAG实战课程40课时完整规划.md  RAG实战课程完整规划.md  alembic.ini  dev_prompt.md  docker-compose.override.yml  lab-best-practices.md  lecture-best-practices.md  long_text.txt  module-A.md  module-B.md  module-C.md  sample.md
labs/student/lab01/: .env  .env.example  LAB_TASKS.md  TODO_SUMMARY.md  pyproject.toml  rag_system.db  test_config.py  test_content.txt
rag-system/: Dockerfile  RAG系统分支增量开发分析报告.md  README.md  REPAIR_SUMMARY.md  analyze_branches.py  branch_analysis_report.json  compare_actual_vs_expected.py  comprehensive_analysis_report.md  comprehensive_fix_plan.md  deep_code_investigation.py  deep_investigation_results.json  docker-compose.monitoring.yml  docker-compose.yml  fix_rerank_core_services.sh  fix_rerank_modules.sh  keyword_search.py  lesson11_refactor_analysis.md  lesson11_分支合并报告.md  lesson_comparison_report.json  lesson_requirements.json  lesson_requirements_analysis.py  main.py  pyproject.toml  requirements.txt  start.bat  start.sh  start_interactive_tuner.py  teaching_impact_assessment.md  test_chunk_system.py  test_chunking.py  test_connections.py  test_database.py  test_document_manager.py  test_jieba.py  test_lesson07.py  test_models.py  test_pdf_parser.py  test_repositories.py  verify_all_lessons.sh  代码整合重构方案.md  (+3 more)
rag-system/.trae/documents/: lesson08_教师讲义.md
rag-system/alembic/: env.py  script.py.mako
rag-system/code_templates/: lesson02_enhanced_pdf_parser.py  lesson08_hybrid_retriever.py  lesson12_multi_document_processor.py  lesson13_vector_database_optimizer.py  lesson14_query_understanding_enhancer.py  lesson15_multimodal_rag_system.py  lesson16_advanced_rag_optimizer.py  lesson17_enterprise_rag_deployment.py  lesson18_production_monitoring.py  lesson19_rag_evaluation.py
rag-system/config/: prometheus.yml  redis.conf
rag-system/docker/scripts/: entrypoint.sh  healthcheck.sh
rag-system/experiments/lesson20/: fault_injection_demo.py  monitoring_demo.py  rag_integration_demo.py  recovery_demo.py  simple_fault_injection_demo.py  simple_monitoring_demo.py  simple_performance_demo.py  simple_recovery_demo.py
rag-system/init-scripts/: 01-init-tables.sql
rag-system/lesson18_text_cleaning/: README.md  api.py  cleaning_pipeline.py  config.py  demo.py  noise_detector.py  quality_evaluator.py  requirements.txt  test_text_cleaning.py  text_cleaner.py
rag-system/lesson19/: README.md  smart_paragraph_chunker_template.py  test_smart_paragraph.py  第十九节课_插件化切分策略扩展_学生实验指导.md  第十九节课_插件化切分策略扩展_教师讲义.md  课程配置.md
rag-system/lesson20_故障注入与恢复演练/: README.md  学生实验指导.md  教师讲义.md
rag-system/scripts/: backup.sh  init-db.sql  migrate_data.py  optimize_database.py  start_dev.py  test_services.py  verify_environment.py
rag-system/src/: __init__.py  config.py  main.py
rag-system/src/api/: __init__.py  embedding.py  health.py  rag.py
rag-system/src/chunk_experiment/: chunk_optimizer.py  (+3 more)
rag-system/test_documents/: sample.txt  structured.md
rag-system/tests/: test_batch_vectorization.py  test_embedding.py  test_qdrant.py
(+417 files in other folders)
