[project]
name = "rag-lab01"
version = "0.1.0"
description = "RAG系统基础搭建实验 - 完整版"
authors = [
    {name = "RAG Course", email = "course@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # FastAPI和Web服务
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    # 数据库
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "psycopg2-binary>=2.9.9",
    # 缓存
    "redis>=5.0.1",
    # 向量数据库
    "qdrant-client>=1.6.9",
    # AI和机器学习
    "openai>=1.3.7",
    "numpy>=1.24.3",
    "scikit-learn>=1.3.2",
    "sentence-transformers>=2.2.0",
    # PDF处理
    "pypdf2>=3.0.1",
    "pdfplumber>=0.10.3",
    # 文本处理
    "nltk>=3.8.1",
    "spacy>=3.7.2",
    # 工具库
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # 日志和监控
    "loguru>=0.7.2",
    # HTTP客户端
    "httpx>=0.25.2",
    # 安全
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # 其他工具
    "click>=8.1.7",
    "rich>=13.7.0",
    "tqdm>=4.66.1",
    "reportlab>=4.4.4",
    "chardet>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "types-redis>=4.6.0.11",
]

[project.scripts]
rag-server = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
